--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.0.1",
+    "aws-sdk": "^2.1692.0",
+    "formidable-serverless": "^1.1.1",
+    "mongoose": "^8.15.0",
+    "next": "15.3.2",
+    "openai": "^4.100.0",
+    "pdfjs-dist": "^2.16.105",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "slugify": "^1.6.6",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
